Revert "fix: corrects mapper conflicts and adjusts contracts AddressRepositoryPort"
This reverts commit e51bf59d87aed3e8f872f4136980697f9779a840.